--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
   flex-direction: column;
   justify-content: space-between;
   background-color: rgb(108, 88, 76);
+  /* background-image: linear-gradient(180deg, rgb(108, 88, 76), yellow); */
 }
 
 p{
@@ -28,6 +29,20 @@ section{
   padding: 50px;
   margin-top: 50px;
   margin-bottom: 150px;
+}
+
+#form{
+  background-color: #a98467;
+  margin: 250px 300px;
+  justify-content: center;
+  flex-direction: column;
+}
+
+select {
+  width: 45px; 
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
 }
 
 .icon{
