--- a/css/style.css
+++ b/css/style.css
@@ -1,247 +1,357 @@
-*{
+* {
   margin: 0;
   padding: 0;
-
 }
 
-body{
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(108, 88, 76);
-  color: #dde5b6;
-  /* background-image: linear-gradient(180deg, rgb(108, 88, 76), yellow); */
-}
+@media (max-width: 1890px) {
+  
 
-nav{
-  background-color: #adc178;
-  color: black;
-}
+  body {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(108, 88, 76);
+    color: #dde5b6;
+  }
 
-ul {
+  nav {
+    background-color: #adc178;
+    color: black;
+  }
+
+  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
   }
-  
-li {
-  float: left;
-  border-right: 2px solid black;
-  
-}
 
-li:nth-last-child(1) {
-  float: right;
-  border-left: 2px solid black;
-  border-right: 0px;
-}
-
-li a {
-  display: block;
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  padding: 14px 16px;
-}
-
-li a:hover {
-  background-color: #a98467;
-}
-
-.icon{
-  width: 40px;
-  height: auto;
-  margin-right: 5px;
-  padding-left: 5px ;
-  padding-top: 5px;
-}
-
-.banner {
-  width: 100%;
-  height: 200px;
-  background-image: url("/img/banner.webp");
-  background-size: cover;
-  background-position: center;
-  color: white;
-  text-align: center;
-  line-height: 200px;
-  font-size: 24px;
-}
-
-
-@media (max-width: 600px) {
-  .banner {
-    height: 100px;
-    font-size: 18px;
-    line-height: 100px;
+  li {
+    float: left;
+    border-right: 2px solid black;
   }
 
-  #row{
-    flex-direction: column;
+  li:nth-last-child(1) {
+    float: right;
+    border-left: 2px solid black;
+    border-right: 0px;
+  }
+
+  li a {
+    display: block;
     color: black;
+    text-align: center;
+    text-decoration: none;
+    padding: 14px 16px;
   }
-  
-  .card{
+
+  li a:hover {
+    background-color: #a98467;
+  }
+
+  .active{
+    background-color: #a98467;
+  }
+
+  .icon {
+    width: 40px;
+    height: auto;
+    margin-right: 5px;
+    padding-left: 5px;
+    padding-top: 5px;
+  }
+
+  .banner {
+    width: 100%;
+    height: 200px;
+    background-image: url("/img/banner.webp");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+    line-height: 200px;
+    font-size: 24px;
+  }
+
+  /* Global Card Layout */
+  #row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 50px;
+  }
+
+  .card {
     position: relative;
     text-align: center;
     width: 262px;
     height: 384px;
     margin-right: 20px;
     border-radius: 15px;
-    border: 1px, solid, black;
+    border: 1px solid black; /* Fixed syntax */
     background-color: #adc178;
   }
-  
-  .card img{
-    width: 250px;
+
+  .card h3{
+    color: black;
+  }
+
+  .card img {
+    width: 90%;
     height: 220px;
-    
     padding: 6px;
     border-radius: 15px;
   }
-  
-  .card a{
-    position: absolute;
-    right: 35%;
-    bottom: 20px;
-    width: 80px;
-    height: 20px;
+
+  .card a {
+    position: relative; /* Changed to relative for better resizing */
+    display: block; /* Make the button behave like a block element */
+    margin: 10px auto; /* Center it horizontally */
+    width: 80px; /* Adjust width */
+    max-width: 100%; /* Ensure it doesn't overflow on small screens */
+    height: 30px;
+    bottom: -55px;
     background-color: #a98467;
-    border: 2px, solid, black;
+    border: 2px solid black;
     text-decoration: none;
     border-radius: 15px;
     color: black;
     font-family: 'Times New Roman', Times, serif;
     font-size: medium;
+    text-align: center;
+    line-height: 30px; /* Vertically center the text inside the button */
+  }
+
+  .card a:hover {
+      background-color: #adc178;
+  }
+
+  h2 {
+    color: #dde5b6;
+    font-size: 350%;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 3%;
+  }
+
+  .home_article {
+    width: 40%; 
+  }
+  
+  section:nth-child(3), p{
+    flex-direction: row-reverse;
+    padding-left: 20px;
+  } 
+  
+  section img{
+    width: 400px;
+    height: 400px;
+  }
+
+  section {
+    width: 100%; /* Ensure sections take full width */
+    display: flex;
+    justify-content: center;
+    padding: 25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #adc178;
+    width: 100%;
+    text-align: center;
+    bottom: 0;
+    position: fixed;
+  }
+
+  footer p {
+    padding: 1%;
+    color: black;
+  }
+
+  aside{
+    right: 0;
+    position: absolute;
     
   }
-  
-  
-  
-  .card a:hover{
-    background-color: #adc178;
+
+  aside img{
+    float: right;
+    width: 50px;
+    height: 50px;
+  }
+
+  .burger-icon {
+    display: none; /* Hidden by default */
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
   }
 }
 
-#text{
-  color: #dde5b6;
-  text-align: center;
-}
+/* Mobile-specific styles */
+  @media (max-width: 768px) {
+    body {
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(108, 88, 76);
+      color: #dde5b6;
+    }
 
-h2{
-  color: #dde5b6;
-  font-size: 350%;
-  font-family: 'Times New Roman', Times, serif;
-  padding-left: 3%;
-}
-
-#form{
-  background-color: #a98467;
-  margin: 250px 300px;
-  justify-content: center;
-  flex-direction: column;
-}
-
-select {
-  width: 45px; 
-  border: none;
-  border-radius: 4px;
-  background-color: #f1f1f1;
-}
-
-section {
-  width: auto; 
-  display: flex;
-  justify-content: center;
-  padding: 25px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-section h1{
-  position: absolute;
+    ul {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      text-align: center;
+    }
   
-}
-.home_article {
-  width: 40%; 
-
-}
-.home_pictures1, figcaption{
-  margin-left: 20px;
-}
-
-section:nth-child(6){
-  text-align: center;
-}
-
-section:nth-child(3), p{
-  flex-direction: row-reverse;
-  padding-left: 20px;
-}
-
-section img{
-  width: 400px;
-  height: 400px;
-}
-
-#row{
-  flex-direction: row;
-  color: black;
-}
-
-.card{
-  position: relative;
-  text-align: center;
-  width: 262px;
-  height: 384px;
-  margin-right: 20px;
-  border-radius: 15px;
-  border: 1px, solid, black;
-  background-color: #adc178;
-}
-
-.card img{
-  width: 250px;
-  height: 220px;
+    li {
+      float: none;
+      border-right: none;
+      border-bottom: 1px solid black;
+    }
   
-  padding: 6px;
-  border-radius: 15px;
-}
-
-.card a{
-  position: absolute;
-  right: 35%;
-  bottom: 20px;
-  width: 80px;
-  height: 20px;
-  background-color: #a98467;
-  border: 2px, solid, black;
-  text-decoration: none;
-  border-radius: 15px;
-  color: black;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: medium;
+    li:nth-last-child(1) {
+      float: none;
+      border-left: none;
+      border-bottom: 0px;
+    }
   
-}
+    /* Show the burger icon */
+    .burger-icon {
+      display: block;
+    }
+  
+    /* Show the menu when the burger icon is clicked */
+    ul.active {
+      display: flex;
+    }
 
+    .banner {
+      height: 100px;
+      font-size: 18px;
+      line-height: 100px;
+    }
+  
+    /* #form{
+      background-color: #a98467;
+      margin: 250px 300px;
+      justify-content: center;
+      flex-direction: column;
+    }
+  
+    select {
+      width: 45px;
+      border: none;
+      border-radius: 4px;
+      background-color: #f1f1f1;
+    } */
+  
+    section {
+      display: flex;
+      flex-direction: column; /* Stack elements vertically */
+      align-items: center; /* Center content horizontally */
+      justify-content: center;
+      width: 100%; /* Ensure section takes full width */
+      margin: 50px auto; /* Center section with margin */
+      position: relative;
+    }
+    
+    section img {
+      order: -1; /* Make image appear at the top */
+      width: 90%; /* Ensure image takes up most of the width */
+      height: auto; /* Keep the image's aspect ratio */
+      margin-bottom: 20px; /* Space between image and text */
+    }
 
+    section:nth-child(3){
+      flex-direction: column;
+      padding-left: 20px;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    } 
+    
+    section:nth-child(3) img {
+      order: -1;
+      width: 190%; /* Ensure the image for this section is wider */
+      height: 250px;
+      margin-left: -50%;
+      margin-bottom: 10px;
+    }
+    
+    section h2, section p, figcaption {
+      text-align: center; /* Center text content */
+      margin: 10px auto; /* Add margins around text */
+    }
+    
+    section h2, p {
+      width: 90%; /* Make the text area wider */
+      max-width: 800px; /* Set a maximum width to avoid the text being too wide */
+    }
 
-.card a:hover{
-  background-color: #adc178;
-}
+    .home_article{
+      width: 400px;
+    }
+    
+    h2 {
+      color: #dde5b6;
+      font-size: 200%;
+      font-family: 'Times New Roman', Times, serif;
+      margin-bottom: 20px; /* Add space below the heading */
+    }
+    
+    p {
+      font-size: 100%; /* Set a base font size for readability */
+      line-height: 1.6; /* Add line spacing for readability */
+      color: #dde5b6;
+    }
+    
+    figcaption {
+      font-size: 90%; /* Slightly smaller text for the caption */
+      margin-top: 10px;
+      color: #dde5b6;
+    }
+    
+  
+    #form {
+      background-color: #a98467;
+      margin: 250px 300px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
 
-footer{
-  background-color: #adc178;
-  width: 100%;
-  text-align: center;
-  bottom: 0;
-  position: fixed;
-}
+    #row {
+      display: flex;
+      flex-direction: column; /* Stack cards vertically */
+      align-items: center; /* Center cards horizontally */
+      justify-content: center;
+      width: 100%; /* Ensure the row takes full width */
+      color: black;
+    }
 
-footer p {
-  padding: 1%;
-  color: black;
-}
+    .card {
+      width: 100%; /* Full width on mobile */
+      max-width: 300px; /* Limit max width */
+      height: 350px;
+      margin-bottom: 20px; /* Space between cards */
+    }
 
+    .card img {
+      width: 95%; /* Full-width image */
+      height: 220px;
+      padding: 6px;
+    }
 
-
+    .card a {
+      position: relative;
+      margin: 10px 35%; /* Center the button */
+      bottom: -5%;
+      width: 90px;
+      height: 30px;
+    }
+  }
